Internal change
PiperOrigin-RevId: 634231429