@@ -47,6 +47,8 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -267,25 +269,34 @@ public class MctsDynamicDownloadPlugin implements XtsDynamicDownloadPlugin {
 
   @Nullable
   String downloadPublicUrlFiles(String downloadUrl, String subDirName)
-      throws MobileHarnessException {
+      throws MobileHarnessException, InterruptedException {
     synchronized (lock) {
       // tmp/dynamic_download/android/xts/mcts/YYYY-MM/arm64/android-mcts-<module_name>.zip
       String dynamicDownloadDir = DirCommon.getTempDirRoot() + "/mcts_dynamic_download";
       String filePath = PathUtil.join(dynamicDownloadDir, subDirName);
+      URLConnection connection = null;
       try {
-        // TODO: Add a file checker.
-        fileUtil.checkFile(filePath);
-        logger.atInfo().log("Resource %s is already downloaded to %s", downloadUrl, filePath);
-        return filePath;
-      } catch (MobileHarnessException e) {
-        logger.atInfo().log(
-            "File %s does not exist, needs to download the file %s.", downloadUrl, filePath);
-      }
-      URLConnection connection;
-      try {
-        URL url = new URL(downloadUrl);
+        // get the last modified time of the url, will be 0 if the url not exist.
+        URI uri = new URI(downloadUrl);
+        URL url = uri.toURL();
         connection = url.openConnection();
-      } catch (IOException e) {
+        long urlLastModified = connection.getLastModified();
+        // check the file exists and the last modified time.
+        if (fileUtil.isFileExist(filePath)) {
+          long fileLastModified = fileUtil.getFileLastModifiedTime(filePath).toEpochMilli();
+          // check if the zip file is valid and up to date.
+          if (urlLastModified < fileLastModified && fileUtil.isZipFileValid(filePath)) {
+            logger.atInfo().log("File %s is up to date, skip downloading.", filePath);
+            return filePath;
+          } else {
+            logger.atInfo().log(
+                "File %s is out of date or broken, need to download again.", filePath);
+            fileUtil.removeFileOrDir(filePath);
+          }
+        } else {
+          logger.atInfo().log("File %s does not exist, needs to download the file.", filePath);
+        }
+      } catch (IOException | URISyntaxException e) {
         throw new MobileHarnessException(
             AndroidErrorId.XTS_DYNAMIC_DOWNLOADER_FILE_DOWNLOAD_ERROR,
             String.format("An I/O error occurred opening the URLConnection to %s", downloadUrl),
